# Curve-coupling

./: .gitignore  README.md  Test_curveCoupling.py  Test_curveCoupling_Equality.py  Test_curveCoupling_Islands.py  Test_curveCoupling_Islands_Equality.py  Test_curveCoupling_Singularity.py  Test_curveCoupling_Singularity_Equality.py  Test_curveGenerator.py  Test_curveInterpExtrap.py  Test_graphAnalysis.py  Test_stabilityAnalysis.py  Test_stabilityAnalysis_Equality.py  auxFunc.py  curveAnalysis.py  curveAnalysis_critPoints.py  curveCoupling.py  curveCriticalPointsAnalysis.py  curveGenerators.py  curveInterpExtrapFunc.py  graphAnalysis.py  pyproject.toml  setup.py  stabilityAnalysis.py
src/curveCoupling/: __init__.py  curveAnalysis.py  curveAnalysis_Equality.py  curveCoupling.py  (+3 more)
src/curveCoupling.egg-info/: PKG-INFO  SOURCES.txt
tests/: ComputationScale_islands.py  ComputationScale_main.py  ComputationScale_sequential.py  Make_animation.py  Make_figures.py  Test_curveCoupling.py  Test_curveCoupling_Equality.py  Test_curveCoupling_FindIslands.py  Test_curveCoupling_Islands.py  Test_curveCoupling_Islands_Equality.py  Test_curveCoupling_Sequential.py  Test_curveCoupling_Singularity.py  Test_curveCoupling_Singularity_Equality.py  Test_curveCoupling_Split.py  Test_curveGenerator.py  Test_curveInterpExtrap.py  Test_curveInterpolator.py  Test_curve_Scaling_Disp.py  Test_graphAnalysis.py  Test_inverseProblem.py  Test_oneDimesional2Equality.py  Test_problemConversion.py  Test_stabilityAnalysis.py  Test_stabilityAnalysis_Equality.py  Test_stabilityAnalysis_single.py
(+21 files in other folders)
