[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "curveCoupling"
version = "1.0.0"
description = "A package for curve coupling analysis"
authors = [
    { name="Franco N. Pinan Basualdo", email="francopb.20@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "networkx"
]

[project.urls]
Homepage = "https://github.com/Francopb/Curve-coupling"